# CPlusPlus-project

./: .gitignore  generate_data.py
data/authors/: authors.txt
data/papers/: papers.txt
outputs/: 周生斌_简易科研文献管理系统答辩PPT_雏形.pptx  周生斌_简易科研文献管理系统答辩PPT_雏形.pptx.inspect.ndjson  邵一景_简易科研文献管理系统答辩PPT_雏形.pptx  邵一景_简易科研文献管理系统答辩PPT_雏形.pptx.inspect.ndjson
report_drafts/: 周生斌_详细设计说明.md  周生斌_负责模块_UML.dot  调试与测试.md  邵一景_详细设计说明.md  邵一景_负责模块_UML.dot
ui/: CMakeLists.txt
ui/src/app/: main.cpp  mainwindow.cpp  mainwindow.h
ui/src/core/: Attachment.cpp  Attachment.h  AttachmentFileUtils.cpp  AttachmentFileUtils.h  Author.cpp  Author.h  AuthorCatalog.cpp  AuthorCatalog.h  Catalog.cpp  Catalog.h  Conference.cpp  Conference.h  CoreTypes.h  Journal.cpp  Journal.h  LibraryException.h  LibraryManager.cpp  LibraryManager.h  OnlineMetadataService.cpp  OnlineMetadataService.h  Paper.cpp  Paper.h  Serializable.h  SerializationUtils.cpp  SerializationUtils.h  Source.h  StoragePaths.cpp  StoragePaths.h  manage.cpp  manage.h
ui/src/dialogs/: attachmentdialog.cpp  attachmentdialog.h  authordialog.cpp  authordialog.h  catalogdialog.cpp  catalogdialog.h  paperdialog.cpp  paperdialog.h  pdfimportpreviewdialog.cpp  pdfimportpreviewdialog.h  sourcedialog.cpp  sourcedialog.h
ui/src/pages/: attachmentpage.cpp  attachmentpage.h  authorpage.cpp  authorpage.h  catalogpage.cpp  catalogpage.h  paperpage.cpp  paperpage.h  sourcepage.cpp  sourcepage.h
